--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - scipy==1.1.0
   - tensorflow==1.10.0
   - Pillow==5.3.0
-  - pymongo==3.7.2
+  - pymongo[tls,srv]==3.7.2
   - Wand==0.4.5
   - reportlab==3.5.12
   - canvas==0.2
